# wuerfel-rs

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  cSpell.json  dist-workspace.toml
.github/workflows/: release-plz.yml  release.yml  test.yml
password-lists/: README.md
src/: cli.rs  clipboard.rs  decode.rs  entropy.rs  generation.rs  main.rs  password_lists.rs  random.rs
wix/: main.wxs
