[package]
name = "wuerfel"
description = "Diceware password generator cli based on eff password lists."
version = "0.1.9"
edition = "2024"
authors = ["Adam McKellar <dev@mckellar.eu>"]
license = "MPL-2.0"
repository = "https://github.com/WyvernIXTL/wuerfel-rs"
homepage = "https://github.com/WyvernIXTL/wuerfel-rs"
keywords = ["diceware", "password", "password-generator", "passphrase", "word-list"]
categories = ["command-line-utilities", "security", "authentication"]

[package.metadata.wix]
upgrade-guid = "A2B90EFA-6A77-47DE-A055-87E42DAD5ECB"
path-guid = "E3E9C2F2-954B-461E-A718-9DAEEC2E8523"
license = false
eula = false

[dependencies]
bincode = "2.0.1"
clap = { version = "4.5.46", features = ["derive"] }
colored = "3.0.0"
copypasta = "0.10.2"
error-stack = "0.5.0"
license-fetcher = "0.8.4"
mimalloc = { version = "0.1.48", features = ["secure", "v3"] }
miniz_oxide = "0.8.9"
rand = { version = "0.9.2", default-features = false, features = ["os_rng", "std"] }
secure-types = "0.1.31"
thiserror = "2.0.16"
zeroize = { version = "1.8.1", features = ["derive"] }
zeroizing-alloc = "0.1.0"

[build-dependencies]
bincode = "2.0.1"
license-fetcher = { version = "0.8.4", features = ["build"] }
miniz_oxide = "0.8.9"
regex-lite = "0.1.7"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
